--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: tasks
+#
+#  id         :integer          not null, primary key
+#  name       :string(255)
+#  content    :string(255)
+#  done       :boolean
+#  due        :date
+#  list_id    :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
