Nested Sets added
Annotation-Update

--- a/test/fixtures/lists.yml
+++ b/test/fixtures/lists.yml
@@ -7,6 +7,9 @@
 #  user_id    :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  parent_id  :integer
+#  lft        :integer
+#  rgt        :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
