First try of Prioritiy-Popup-Menu

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -10,6 +10,10 @@
 #  list_id    :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  parent_id  :integer
+#  lft        :integer
+#  rgt        :integer
+#  priority   :integer          default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
